--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <section class="hero-image section">
         <div class="container">
           <h1 class="page-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="order-button">Order Service</button>
+          <button type="button" class="order-button btn">Order Service</button>
         </div>
       </section>
       <section class="advantages-section section">
@@ -451,7 +451,119 @@
             </li>
           </ul>
         </div>
+
+        <form class="subscribe-form-footer" name="subscribe_form">
+          <label class="subscribe-form-field">
+            <span class="subscribe-form-label"> Subscribe </span>
+            <input
+              class="subscribe-form-input"
+              type="email"
+              name="footer_subscribe_email"
+              placeholder="E-mail"
+            />
+          </label>
+          <button class="btn subscribe-form-button" type="submit">
+            Subscribe
+            <svg class="subscribe-button-icon" width="24" height="20">
+              <use href="./images/icons.svg#icon-paper-plane"></use>
+            </svg>
+          </button>
+        </form>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-button" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+
+        <p class="modal-caption">
+          Leave your contacts and we will call you back
+        </p>
+
+        <form class="modal-form" name="contacts_form">
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="username">Name</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="text"
+                name="modal_username"
+                id="username"
+              />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="userphone">Phone</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="tel"
+                name="modal_phone"
+                id="userphone"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="useremail">Email</label>
+            <div class="modal-form-wrapper">
+              <input
+                class="modal-form-input"
+                type="email"
+                name="modal_email"
+                id="useremail"
+              />
+              <svg class="modal-form-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-form-field">
+            <label class="modal-form-label" for="usercomment">Comment</label>
+            <textarea
+              class="modal-form-comment"
+              name="modal_usercomment"
+              id="usercomment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-form-agreement">
+            <input
+              class="agreement-input visually-hidden"
+              type="checkbox"
+              id="useragreement"
+              name="modal_useragreement"
+              value="true"
+            />
+            <label class="modal-form-box" for="useragreement">
+              <span class="custom-checkbox">
+                <svg class="custom-checkbox-icon" width="9" height="7">
+                  <use href="./images/icons.svg#icon-check-mark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a class="modal-form-link" href="#" target="_blank">
+                Privacy Policy
+              </a>
+            </label>
+          </div>
+
+          <button class="btn modal-form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
