--- a/index.html
+++ b/index.html
@@ -452,23 +452,27 @@
           </ul>
         </div>
 
-        <form class="subscribe-form-footer" name="subscribe_form">
-          <label class="subscribe-form-field">
-            <span class="subscribe-form-label"> Subscribe </span>
-            <input
-              class="subscribe-form-input"
-              type="email"
-              name="footer_subscribe_email"
-              placeholder="E-mail"
-            />
-          </label>
-          <button class="btn subscribe-form-button" type="submit">
-            Subscribe
-            <svg class="subscribe-button-icon" width="24" height="20">
-              <use href="./images/icons.svg#icon-paper-plane"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="subscribe-wrapper">
+          <p class="subscribe-text">Subscribe</p>
+
+          <form class="subscribe-form">
+            <label class="subscribe-label">
+              <input
+                class="subscribe-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+              />
+            </label>
+
+            <button class="subscribe-button" type="submit">
+              Subscribe
+              <svg class="subscribe-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
 
