--- a/index.html
+++ b/index.html
@@ -452,23 +452,23 @@
           </ul>
         </div>
 
-        <div class="subscribe-wrapper">
-          <p class="subscribe-text">Subscribe</p>
+        <div class="subscribe-form-wrapper">
+          <p class="subscribe-form-text">Subscribe</p>
 
           <form class="subscribe-form">
-            <label class="subscribe-label">
+            <label class="subscribe-form-label">
               <input
-                class="subscribe-input"
+                class="subscribe-form-input"
                 type="email"
                 name="user-email"
                 placeholder="E-mail"
               />
             </label>
 
-            <button class="subscribe-button" type="submit">
+            <button class="btn subscribe-form-button" type="submit">
               Subscribe
-              <svg class="subscribe-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-send"></use>
+              <svg class="subscribe-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-paper-plane"></use>
               </svg>
             </button>
           </form>
