--- a/index.html
+++ b/index.html
@@ -490,15 +490,15 @@
 
         <form class="modal-form" name="contacts_form">
           <div class="modal-form-field">
-            <label class="modal-form-label" for="username">Name</label>
+            <label class="modal-form-label" for="user-name">Name</label>
             <div class="modal-form-wrapper">
               <input
                 class="modal-form-input"
                 type="text"
-                name="modal_username"
-                id="username"
+                name="user-name"
+                id="user-name"
               />
-              <svg class="modal-form-icon" width="18" height="18">
+              <svg class="modal-form-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
@@ -535,11 +535,11 @@
           </div>
 
           <div class="modal-form-field">
-            <label class="modal-form-label" for="usercomment">Comment</label>
+            <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-comment"
               name="modal_usercomment"
-              id="usercomment"
+              id="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -548,13 +548,13 @@
             <input
               class="agreement-input visually-hidden"
               type="checkbox"
-              id="useragreement"
+              id="user-privacy"
               name="modal_useragreement"
               value="true"
             />
-            <label class="modal-form-box" for="useragreement">
+            <label class="modal-form-box" for="user-privacy">
               <span class="custom-checkbox">
-                <svg class="custom-checkbox-icon" width="9" height="7">
+                <svg class="custom-checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check-mark"></use>
                 </svg>
               </span>
