Fix transition properties

--- a/index.html
+++ b/index.html
@@ -534,11 +534,11 @@
             </div>
           </div>
 
-          <div class="modal-form-field">
+          <div class="modal-form-field comment-field">
             <label class="modal-form-label" for="user-comment">Comment</label>
             <textarea
               class="modal-form-comment"
-              name="modal_usercomment"
+              name="user-comment"
               id="user-comment"
               placeholder="Text input"
             ></textarea>
@@ -549,7 +549,7 @@
               class="agreement-input visually-hidden"
               type="checkbox"
               id="user-privacy"
-              name="modal_useragreement"
+              name="user-privacy"
               value="true"
             />
             <label class="modal-form-box" for="user-privacy">
